# testing-rust-integration

./: .gitignore  pyproject.toml
app/: main.py
modules/rust_module/: pyproject.toml
modules/rust_module/src/: lib.rs
modules/test_module/: Cargo.toml
modules/test_module/src/: factorial.rs  fibonacci.rs  lib.rs
