[tool.poetry]
name = "testing-rust-integration"
version = "0.1.0"
description = ""
authors = ["intezya <intezya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
test-module = {path = "modules/test_module/target/wheels/test_module-0.1.0-cp312-cp312-manylinux_2_34_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
